feat: add available events by date endpoint
